# as-manager

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  env
migrations/: 1_setup.sql  2_announcement.sql  3_platoon_team.sql  4_user.sql  5_survey.sql
migrations/00000000000000_diesel_initial_setup/: down.sql
migrations/2025-10-05-104330-0000_user_team_platoon/: down.sql  up.sql
migrations/2025-10-22-220025-0000_event/: down.sql  up.sql
src/: app.rs  auth.rs  components.rs  database.rs  domain.rs  lib.rs  main.rs  routes.rs  server.rs
src/components/: auth.rs  event.rs  play_event.rs  player.rs  protected.rs  team.rs  user.rs  util.rs
src/database/: models.rs  platoon.rs  schema.rs
src/domain/: authentication.rs  platoon.rs
src/routes/: announcements.rs  login.rs  platoon.rs  profile.rs  teams.rs
templates/: base.html.tera
templates/pages/: announcements.html.tera  fallback.html.tera  login.html.tera  platoon.html.tera  profile.html.tera  teams.html.tera
templates/pages/announcements/: new_modify.html.tera
templates/pages/platoon/: new_survey.html.tera
templates/pages/teams/: team.html.tera
templates/snippets/platoon/survey/: add_answer.html.tera
