[package]
name = "as-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["form"] }
axum-login = "0.17.0"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
crypto-hashes = "0.10.0"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tera = { version = "1.20.0", features = ["builtins"] }
tera-hot-reload = "0.2.4"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tower-session = "0.0.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
